# HRServ

./: .env.example  BOOTSTRAP.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: hrserv.service
deploy/docker.service.d/: wait-for-tailscale.conf
deploy/launchd/: README.md  com.hrfunc.colima.plist  com.hrfunc.hrserv.plist  install.sh
docker/: Dockerfile  cloudflared.yml  docker-compose.macos.yml  docker-compose.primary.yml  docker-compose.replica.yml  docker-compose.test.yml
docker/postgres/: pg_hba.conf  primary.conf  replica.conf
docker/postgres/initdb/: 01-create-roles.sh
docker/postgres/test-initdb/: 01-apply-migrations.sh
docs/: ARCHITECTURE.md  BACKUP_RESTORE.md  FAILOVER.md  FOLLOWUPS.md  KEY_ROTATION.md  MONITORING.md  NETWORK_TROUBLESHOOTING.md  NEW_NODE_SETUP.md  OPERATIONS.md  PHASE_2A_HRSERV1_SETUP.md  SHADOW_WINDOW.md
hrserv/: __init__.py  auth.py  config.py  db.py  main.py  models.py
hrserv/routes/: __init__.py  health.py  ingest.py
hrserv/scripts/: __init__.py  mint_key.py
migrations/: 0001_init.sql
scripts/: backup.sh  configure_pg_hba.sh  mint_key.py  promote_replica.sh
tests/: README.md  conftest.py  test_auth.py  test_config.py  test_cors.py  test_db.py  test_deploy_artifacts.py  test_health.py  test_ingest.py
tests/fixtures/: sample_hrf.json
