[project]
name = "hrserv"
version = "0.1.0"
description = "Receiver service for HRF JSON uploads from the hrfunc-flask-app frontend"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
authors = [
    { name = "Denny Schaedig", email = "dennys@wustl.edu" },
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",
    "argon2-cffi>=23.1",
]

[project.scripts]
hrserv-mint-key = "hrserv.scripts.mint_key:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hrserv"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow assert False in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false  # FastAPI decorators are dynamically typed

[[tool.mypy.overrides]]
module = ["asyncpg.*", "argon2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live Postgres at DATABASE_URL",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:asyncpg.*",
]
